Updated .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
 
 ### Python ###
-config.py
+myconfig.py
 token.pickle
 credentials.json
 test.py
